--- a/EDA_for_text_features.ipynb
+++ b/EDA_for_text_features.ipynb
@@ -1263,23 +1263,17 @@
         "id": "b-md8vtUUAf7"
       },
       "source": [
-        "## plan to change for lvl 3.\n",
-        "A0. Changed grouplist set. A very slight improvement in training: training error is higher and validation is a tiny bit lower. \n",
+        "##  EDA for text features.\n",
+        "1. Check if items with similar names are sold in the same shops (i.e. same item was recorded twice or indicates that 2 different shops were recording sales of the same item (so it is a data leak).\n",
+        "2. How many such (pairs of items) are there. actually only a few hundred?\n",
         "\n",
-        "A. mean encode text features (instead of keeping them categorical)\n",
+        "## finding the most similar text features. \n",
+        "The way they are encoded is: subcategory, then name: (ARTIST/Album). So for every item id we can find some similar items. \n",
+        "1. Create trie for text item_name and use it to find the most simlar item. Need to record first item sales month and item_id in each trie. \n",
+        "2. for every item_id --> find most similar item_id and use it's target lags as features.\n",
+        "3. If we assume that each item is sold at some point in train or test set, it is not a data leak to use first month sale. \n",
         "\n",
-        "B. get rid of days_lag_x -- overfitting\n",
-        "\n",
-        "C. Deep learning similarity. For every item find a most similar one(s) on the list. For every item (in shop/month) find the most similar item (in history?)\n",
-        "\n",
-        "##Data prep for LightGBM.\n",
-        "\n",
-        "1.test set is augmented. It would be a better idea not to merge categorial and shop features in all_data as I did.\n",
-        "\n",
-        "2. Maybe it is better to do aggregations from the original sales file than from monthly aggregates?\n",
-        "\n",
-        "3.updates: for the targets:  filled 0 after aggregations\n",
-        "4.excude =False\n",
+        " \n",
         "  \n"
       ]
     },
